# argus

./: .gitignore  .pre-commit-config.yaml  AGENT_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SPEC.md  action.yml  audit-report-2026-07-13.md  skills-lock.json  specrail-manifest.json  specrail-source.json  workflow.yaml
.github/: PULL_REQUEST_TEMPLATE.md
action/: package-lock.json  package.json  release.json
checks/: github_pr_evidence.py  github_review_evidence.py  github_review_threads.py  pack_asset_validation.py  pr_gate.py  review_json_gate.py  route_gate.py  specrail_lib.py  verify_specrail_adoption.py
corpus/: README.md  index.json
crates/argus-agent/: Cargo.toml
crates/argus-agent/src/: atomic_write.rs  baseline.rs  capability.rs  config.rs  decision.rs  injection.rs  judge.rs  lib.rs  snapshot.rs  surface.rs
crates/argus-agent/src/capability/: classify.rs  syntax.rs  tests.rs
crates/argus-agent/src/capability/classify/: curl.rs
crates/argus-agent/src/capability/syntax/: bash.rs  normalize.rs  receiver.rs  redirect.rs  reference.rs  shell.rs  tests.rs
crates/argus-agent/src/capability/tests/: gh102.rs  gh102_curl.rs  gh112.rs
crates/argus-agent/tests/: gh106_snapshot.rs  gh87_capability.rs  integration.rs
crates/argus-agent/tests/fixtures/agt01-benign-skill/: SKILL.md
crates/argus-agent/tests/fixtures/agt01-malicious-skill/: SKILL.md
crates/argus-agent/tests/fixtures/agt02-baseline-mcp/: .mcp.json
crates/argus-agent/tests/fixtures/agt02-baseline-mcp-drift/: .mcp.json
crates/argus-agent/tests/fixtures/agt02-baseline-skill/: SKILL.md
crates/argus-agent/tests/fixtures/agt03-benign-hook/.claude/hooks/: post-edit.sh
crates/argus-agent/tests/fixtures/agt03-curl-sh-hook/.claude/hooks/: post-edit.sh
crates/argus-agent/tests/fixtures/agt04-snapshot-base/: .cursorrules  AGENTS.md
crates/argus-agent/tests/fixtures/agt04-snapshot-base/.claude/rules/: policy.txt
crates/argus-agent/tests/fixtures/agt05-alwaysload/: .mcp.json
crates/argus-agent/tests/fixtures/agt05-benign-config/: .mcp.json
crates/argus-agent/tests/fixtures/agt06-alias-concat/: SKILL.md  collect.py
crates/argus-agent/tests/fixtures/agt06-comment-only/: SKILL.md  examples.ts
crates/argus-cli/: Cargo.toml
crates/argus-cli/src/: agent.rs  corpus.rs  corpus_path.rs  intel.rs  main.rs  report.rs  router.rs  sarif.rs  sarif_vulns.rs  vulns.rs
crates/argus-cli/tests/: action_contract_cli.rs  agent_snapshot_cli.rs  corpus.rs  intel_cli.rs  lockfile_cli.rs  npm_anomaly_cli.rs  sarif_cli.rs  vulns_cli.rs
crates/argus-cli/tests/fixtures/: judge-runner.sh
crates/argus-composer/: Cargo.toml
crates/argus-composer/src/: lib.rs  metadata.rs  rules.rs  scan.rs
crates/argus-composer/tests/: integration.rs
crates/argus-core/: Cargo.toml
crates/argus-core/src/: lib.rs  scan.rs  url.rs
crates/argus-crates/: Cargo.toml
crates/argus-crates/src/: lib.rs  metadata.rs  rules.rs  scan.rs
crates/argus-crates/tests/: integration.rs
crates/argus-fetch/: Cargo.toml
crates/argus-fetch/src/: anomaly.rs  extract.rs  integrity.rs  lib.rs  packument.rs  provenance.rs  transport.rs
crates/argus-fetch/src/testdata/: sigstore_2_3_1_attestations.json
crates/argus-fetch/tests/: anomaly.rs  integration.rs  sigstore_integration.rs
crates/argus-go/: Cargo.toml
crates/argus-go/src/: dirhash.rs  lib.rs  metadata.rs  rules.rs  scan.rs
crates/argus-go/tests/: integration.rs
crates/argus-intel/: Cargo.toml
crates/argus-intel/src/: atomic_unix.rs  gem_version.rs  go_version.rs  import.rs  lib.rs  matcher.rs  maven_version.rs  normalize.rs  osv.rs  osv_profile.rs  snapshot.rs  version_number.rs
crates/argus-intel/tests/: comparators.rs  fixtures.rs  import.rs  matcher.rs  osv_schema.rs  security.rs
crates/argus-lockfile/: Cargo.toml
crates/argus-lockfile/src/: bounds.rs  detect.rs  lib.rs  model.rs  policy.rs
crates/argus-lockfile/src/parsers/: bundler.rs  cargo.rs  composer.rs  go_sum.rs  mod.rs  package_lock.rs  pnpm.rs  poetry.rs  uv.rs  yarn.rs
crates/argus-lockfile/tests/: detection.rs  js_formats.rs  policy.rs  python_rust_go_formats.rs  resource_limits.rs  ruby_composer_formats.rs
crates/argus-maven/: Cargo.toml
crates/argus-maven/src/: lib.rs  metadata.rs  rules.rs  scan.rs
crates/argus-maven/tests/: integration.rs
crates/argus-nuget/: Cargo.toml
crates/argus-nuget/src/: lib.rs  metadata.rs  rules.rs  scan.rs
crates/argus-nuget/tests/: integration.rs
crates/argus-osv/: Cargo.toml
crates/argus-osv/src/: cache.rs  client.rs  lib.rs  model.rs  normalize.rs  report.rs  resolver.rs  severity.rs
crates/argus-osv/tests/: cache.rs  client.rs  resolver.rs
crates/argus-pypi/: Cargo.toml
crates/argus-pypi/src/: lib.rs  metadata.rs  rules.rs  sdist.rs  wheel.rs
crates/argus-pypi/tests/: integration.rs
crates/argus-rubygems/: Cargo.toml
crates/argus-rubygems/src/: lib.rs  metadata.rs  rules.rs  scan.rs
crates/argus-rubygems/tests/: integration.rs
crates/argus-rules/: Cargo.toml
crates/argus-rules/src/: binary.rs  content.rs  decision.rs  lib.rs  lifecycle.rs  lockfile.rs  name.rs
crates/argus-test-support/: Cargo.toml
crates/argus-test-support/src/: lib.rs
crates/argus-verify/: Cargo.toml
crates/argus-verify/src/: dsse.rs  lib.rs  sigstore.rs
crates/argus-verify/src/testdata/: sigstore_2_3_1_slsa_bundle.json
crates/argus-verify/tests/: dsse_verification.rs  sigstore_real_fixture.rs
crates/safepm-cli/: Cargo.toml
crates/safepm-cli/src/: main.rs
crates/safepm-rules/: Cargo.toml
crates/safepm-rules/src/: binary.rs  content.rs  decision.rs  lib.rs  lifecycle.rs  lockfile.rs  name.rs
docs/: ADOPTION_MATRIX.md  releasing.md  supply-chain-attacks.md
release/: manifest.schema.json
review/: agent_first_review.md
schemas/: pr_review_gate.schema.json  review_result.schema.json
scripts/: package_release.py  verify_release_assets.py
templates/: tasks.md  tech_spec.md
tests/: test_check_workflow.py  test_configured_spec_path_review_regressions.py  test_evaluate.py  test_pr_gate.py  (+12 more)
(+155 files in other folders)
