[workspace]
resolver = "2"
members = [
    "crates/argus-core",
    "crates/argus-rules",
    "crates/argus-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/majiayu000/argus"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"

argus-core = { path = "crates/argus-core" }
argus-rules = { path = "crates/argus-rules" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
