[workspace]
resolver = "2"
members = [
    "crates/argus-core",
    "crates/argus-rules",
    "crates/argus-fetch",
    "crates/argus-pypi",
    "crates/argus-crates",
    "crates/argus-composer",
    "crates/argus-cli",
    "crates/argus-test-support",
    "crates/argus-verify",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/majiayu000/argus"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
toml = "0.8.23"

argus-core = { path = "crates/argus-core" }
argus-rules = { path = "crates/argus-rules" }
argus-fetch = { path = "crates/argus-fetch" }
argus-pypi = { path = "crates/argus-pypi" }
argus-crates = { path = "crates/argus-crates" }
argus-composer = { path = "crates/argus-composer" }
argus-test-support = { path = "crates/argus-test-support" }
argus-verify = { path = "crates/argus-verify" }

# fetch-only deps (HTTP + crypto + archive) live in argus-fetch / argus-pypi.
ureq = { version = "2", default-features = false, features = ["tls"] }
url = "2"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
hex = "0.4"
tempfile = "3"
subtle = "2"

# argus-verify (Sigstore) deps. DSSE signature verification (M2 Day 1) uses the
# RustCrypto stack directly; the heavier `sigstore` crate (Fulcio chain + Rekor)
# arrives in a later milestone. See docs/design/sigstore-verification.md.
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
p384 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
ecdsa = "0.16"
x509-cert = "0.2"
spki = "0.7"
rcgen = "0.13"
rand_core = { version = "0.6", features = ["getrandom"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
