[package]
name = "argus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "argus command-line binary: scan packages and run the regression corpus."

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
argus-core = { workspace = true }
argus-rules = { workspace = true }
argus-fetch = { workspace = true }
argus-pypi = { workspace = true }
argus-crates = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
