[package]
name = "argus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "argus command-line binary: scan packages and run the regression corpus."

[[bin]]
name = "argus"
path = "src/main.rs"

[features]
default = []
# Pass-through to argus-fetch's `sigstore` feature. Off by default
# because it pulls in a network-stack-shaped dependency tree (~450
# transitive crates). Build the CLI with `--features sigstore` to opt in.
sigstore = ["argus-fetch/sigstore"]

[dependencies]
argus-core = { workspace = true }
argus-rules = { workspace = true }
argus-fetch = { workspace = true }
argus-pypi = { workspace = true }
argus-crates = { workspace = true }
argus-composer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
