[package]
name = "argus-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fetch an npm package tarball, verify integrity, extract safely, then hand off to argus-rules."

[features]
default = []
# Full Sigstore signature verification (Fulcio chain + Rekor inclusion +
# DSSE + OIDC identity allowlist) on top of the M1 subject-digest check.
# Off by default: the dependency adds ~450 transitive crates including a
# network stack. Enable on argus-cli with `--features sigstore` (or on a
# direct argus-fetch consumer) to opt in.
sigstore = ["dep:argus-verify", "dep:regex"]

[dependencies]
argus-core = { workspace = true }
argus-rules = { workspace = true }
argus-verify = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
argus-test-support = { workspace = true }
