[package]
name = "argus-intel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bounded offline malicious-package intelligence import and matching for Argus."

[dependencies]
argus-core = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
url = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
semver = { workspace = true }
pep440_rs = { workspace = true }
regex = { workspace = true }
unicode_categories = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true }

[dev-dependencies]
argus-test-support = { workspace = true }
