[package]
name = "argus-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Static detection rules for argus scans."

[dependencies]
argus-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
