[package]
name = "argus-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared test helpers for argus ecosystem crates (MockTransport)."
publish = false

[dependencies]
argus-fetch = { workspace = true }
anyhow = { workspace = true }
