[package]
name = "argus-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sigstore signature verification for argus: DSSE envelope + (later) Fulcio chain + Rekor inclusion."

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
ecdsa = { workspace = true }
x509-cert = { workspace = true }
spki = { workspace = true }
sigstore-verify = { version = "0.8.0", default-features = false }
sigstore-types = { version = "0.8.0", default-features = false }
sigstore-trust-root = { version = "0.8.0", default-features = false }
regex = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
rand_core = { workspace = true }
