[package]
name = "safepm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "safepm command-line binary: scan packages and run the regression corpus."

[[bin]]
name = "safepm"
path = "src/main.rs"

[dependencies]
safepm-core = { workspace = true }
safepm-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
